Adds links to GitHub repository

--- a/httpdocs/scripts/areas/public/dashboard/templates/dashboard.html
+++ b/httpdocs/scripts/areas/public/dashboard/templates/dashboard.html
@@ -22,3 +22,5 @@ and is meant to offer an intelligible and maintainable folder structure that all
   <li>A strategy to work with external html templates and to load modules</li>
   <li>Client side localization strategy</li>
 </ol>
+<hr />
+<a href="https://github.com/RobertoPrevato/Humbular">https://github.com/RobertoPrevato/Humbular</a>
