--- a/httpdocs/scripts/areas/public/help/templates/gettingstarted.html
+++ b/httpdocs/scripts/areas/public/help/templates/gettingstarted.html
@@ -14,7 +14,8 @@
 <h3>How to define routes</h3>
 <ol>
   <li>Organize the routes per area, defining modules using R.js</li>
-  <li>For more information about client side routing, refer to <a href="https://github.com/buero-fuer-ideen/Simrou" target="_blank">Simrou documentation</a></li>
+  <li>See the example included in the repository</li>
+  <li>Refer to <a href="https://github.com/buero-fuer-ideen/Simrou" target="_blank">Simrou documentation</a></li>
 </ol>
 <h3>Code organization</h3>
 <ol>
@@ -27,4 +28,5 @@
   <li>The project template includes Grunt to compile LESS code into CSS, and to bundle and minify JavaScript.</li>
   <li>(Recommended) use the <a href="https://github.com/RobertoPrevato/Knight" target="_blank">Knight tool</a> to generate external html templates.</li>
 </ol>
-
+<hr />
+<a href="https://github.com/RobertoPrevato/Humbular">https://github.com/RobertoPrevato/Humbular</a>
